[gd_scene load_steps=11 format=3 uid="uid://lr4ib5iyid5g"]

[ext_resource type="Script" uid="uid://bilqvrmvichw6" path="res://src/entities/playercontroller.gd" id="1_2lfla"]
[ext_resource type="PackedScene" uid="uid://y1yojrkdm0jh" path="res://src/ui/cooldown.tscn" id="2_3pnt3"]
[ext_resource type="PackedScene" uid="uid://ctkv0cxdu136o" path="res://src/entities/guns/hitscan_weapon.tscn" id="2_dklf8"]
[ext_resource type="PackedScene" uid="uid://cvwdxebxx1yi5" path="res://src/entities/weapon_manager.tscn" id="2_udtjk"]
[ext_resource type="PackedScene" uid="uid://j0nas67m2oo5" path="res://src/entities/guns/grenade_launcher.tscn" id="4_p1m7e"]
[ext_resource type="PackedScene" uid="uid://drvs5gp6oq6lx" path="res://src/ui/crosshair.tscn" id="4_vm6si"]
[ext_resource type="PackedScene" uid="uid://b5flwp06tvo7r" path="res://src/entities/guns/projectile_weapon.tscn" id="5_qsbkc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2lfla"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2lfla"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_co8hi"]

[node name="PlayerController" type="CharacterBody3D" groups=["player"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_2lfla")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_2lfla")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_2lfla")

[node name="WeaponManager2" parent="." instance=ExtResource("2_udtjk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.882099, 0, 0)

[node name="GrenadeLauncher" parent="WeaponManager2" node_paths=PackedStringArray("shooter") instance=ExtResource("4_p1m7e")]
throw_force = 20.0
shooter = NodePath("../..")

[node name="HitscanWeapon" parent="WeaponManager2" node_paths=PackedStringArray("shooter") instance=ExtResource("2_dklf8")]
shooter = NodePath("../..")

[node name="ProjectileWeapon" parent="WeaponManager2" node_paths=PackedStringArray("shooter") instance=ExtResource("5_qsbkc")]
shooter = NodePath("../..")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.997869, 0.0652464, 0, -0.0652464, 0.997869, -0.0310897, 1.15966, 0.0913)

[node name="cam_pivot" type="Node3D" parent="head"]

[node name="cam_collision" type="SpringArm3D" parent="head/cam_pivot"]
transform = Transform3D(0.906308, 0, 0.422618, 0, 1, 0, -0.422618, -7.45058e-09, 0.906308, 0, 0, 0)
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="head/cam_pivot/cam_collision"]
transform = Transform3D(0.906308, -3.14875e-09, -0.422618, 4.43143e-16, 1, -7.45058e-09, 0.422618, 6.75252e-09, 0.906308, 0, 0, 0)

[node name="RayCast3D" type="RayCast3D" parent="head/cam_pivot/cam_collision"]
transform = Transform3D(0.906308, -9.44625e-09, -0.422618, 4.43143e-16, 1, -2.23517e-08, 0.422618, 2.02576e-08, 0.906308, 0, 0, 0)
visible = false
target_position = Vector3(0, 0, -10000)

[node name="timers" type="Node" parent="."]

[node name="boost_left" type="Timer" parent="timers"]
wait_time = 0.2

[node name="boost_cooldown" type="Timer" parent="timers"]
wait_time = 2.5

[node name="CollectableArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectableArea"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
shape = SubResource("CapsuleShape3D_co8hi")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Cooldown" parent="UI" instance=ExtResource("2_3pnt3")]

[node name="Crosshair" parent="UI" node_paths=PackedStringArray("PLAYER_CONTROLLER") instance=ExtResource("4_vm6si")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
PLAYER_CONTROLLER = NodePath("../..")
RETICLE_DISTANCE = 0.75

[connection signal="_attack" from="." to="WeaponManager2" method="_on_player_controller__attack"]
[connection signal="fire" from="WeaponManager2" to="WeaponManager2/GrenadeLauncher" method="_on_weapon_manager_2_fire"]
[connection signal="fire" from="WeaponManager2" to="WeaponManager2/HitscanWeapon" method="_on_weapon_manager_2_fire"]
[connection signal="fire" from="WeaponManager2" to="WeaponManager2/ProjectileWeapon" method="_on_weapon_manager_2_fire"]
[connection signal="timeout" from="timers/boost_left" to="." method="_on_boost_left_timeout"]
[connection signal="timeout" from="timers/boost_cooldown" to="." method="_on_boost_cooldown_timeout"]
